<resources>
    //Scanner resources
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>

    //General resources
    <string name="global_image_description" translatable="false">separtorLine</string>
    <string name="logotype_description" translatable="false">Trazins Resource</string>
    <string name="material_exists_list">El material ya está en la lista</string>
    <string name="unidentified_code">Código no reconocido</string>
    <string name="error_process">Error en el proceso, revise los datos</string>
    <string name="delete">Borrar</string>
    <string name="materials_counter">elementos</string>
    <string name="go_back">Volver atrás</string>
    <string name="empty_data">Debe rellenar los datos obligatorios</string>
    <string name="result">Resultado:</string>
    <string name="status">Estado:</string>
    <string name="start_counter">Iniciar</string>
    <string name="validate_counter">Validar</string>
    <string name="urgent">Urgente:</string>
    <string name="selected">Seleccionar</string>
    <string name="urgent_yes"><font fgcolor='#FFFF3B30'>Si</font></string>
    <string name="no" translatable="false">No</string>
    <string name="save">Guardar</string>

    //Hospital Selection Activity
    <string name="list_hospitals_title">Seleccione un hospital:</string>
    <string name="hospital_not_selected">No ha seleccionado ningún hospital</string>

    //Set RFID Code Activity
    <string name="set_rfid_menu">Asignar RFID</string>
    <string name="set_content">Contenido</string>
    <string name="instrument_description">Instrumento</string>
    <string name="instrument_dm">Datamatrix:</string>
    <string name="instrument_dm_hint">Datamatrix valor</string>

    //Main Activity
    <string name="app_name">Trazins DROID</string>
    <string name="welcome">Bienvenido a Trazins</string>
    <string name="read_code">Proceda a leer su identificación</string>
    <string name="aut_result">Pendiente autenticación</string>
    <string name="correct_user">Autenticación correcta</string>
    <string name="incorrect_user"><font fgcolor='#FFFF3B30'>Usuario incorrecto</font></string>
    <string name="app_version">Versión 1.04</string>
    <string name="wifi_not_conected">La conexión wifi no está habilitada</string>

    //Locate Activity
    <string name="location_title">Ubicación</string>
    <string name="location_details">Bloque:__ Estantería:__ Posición:__</string>
    <string name="location_details_block">Bloque: </string>
    <string name="location_details_shelf">Estantería: </string>
    <string name="location_details_position">Posición: </string>
    <string name="materials_title">Material a ubicar</string>
    <string name="add_location">Ubicar material</string>
    <string name="locate_empty">Lea la etiqueta de ubicación</string>
    <string name="locate_error">Ubicación incorrecta</string>
    <string name="correct_location">Ubicado correctamente</string>

    //Shipment Activity
    <string name="add_shipment">Enviar material</string>
    <string name="materials_shipment_title">Material a enviar</string>
    <string name="shipment_title">Destino</string>
    <string name="shipment_title2">Origen</string>
    <string name="shipment_empty">Lea la etiqueta de destino</string>
    <string name="shipment_empty2">Lea la etiqueta del origen</string>
    <string name="correct_shipment">Enviado correctamente</string>
    <string name="shipment_error">Envío no realizado</string>
    <string name="send_print_label">Enviar e imprimir</string>
    <string name="trolley">Carro:</string>
    <string name="trolley_hint">Lea la etiqueta del carro</string>
    <string name="located_trolley">El carro seleccionado no se puede usar porque está ubicado</string>
    <string name="steri_shipment">Envío a esterilización</string>
    <string name="no_materials_found">Material no encontrado</string>

    //Hospital Shipment
    <string name="add_hospital_shipment">Envío entre hospitales</string>
    <string name="materials_hospital_shipment_title">Material a enviar</string>
    <string name="hospital_shipment_title">Destino</string>
    <string name="hospital_shipment_title2">Origen</string>
    <string name="hospital_shipment_empty">Lea la etiqueta de destino</string>
    <string name="hospital_shipment_empty2">Lea la etiqueta del origen</string>
    <string name="correct_hospital_shipment">Enviado correctamente</string>
    <string name="hospital_shipment_error">Envío no realizado</string>
    <string name="hospital_send_print_label">Enviar e imprimir</string>
    <string name="hospital_trolley">Carro:</string>
    <string name="hospital_trolley_hint">Lea la etiqueta del carro</string>
    <string name="hospital_located_trolley">El carro seleccionado no se puede usar porque está ubicado</string>
    <string name="hospital_steri_shipment">Envío a esterilización</string>

    //Surgical Process Activities
    <string name="surgical_information_title">Datos del proceso quirúrgico</string>
    <string name="surgical_process_title">Proceso quirúrgico</string>
    <string name="intervention_code">Código de intervención:</string>
    <string name="record_number">Número de historia:</string>
    <string name="delivery_note">Número de albarán:</string>
    <string name="materials_surgical_process_title">Material utilizado</string>
    <string name="start_post_counter">Iniciar recuento</string>
    <string name="new_surgical_process">Nuevo</string>
    <string name="edit_surgical_process">Modificar</string>
    <string name="operating_room">Quirófano:</string>
    <string name="correct_surgical_process">Proceso creado correctamente</string>
    <string name="intervention_date">Fecha de intervención:</string>
    <string name="select_intervention_date">Seleccione la fecha de la intervención</string>
    <string name="error_operating_room">Error al cargar los quirófanos</string>
    <string name="add_materials">Añadir material</string>
    <string name="set_not_selected">No ha seleccionado una caja</string>
    <string name="chemical_control">Control químico</string>

    //Selection Activity
    <string name="selection_activity_title">Seleccione un proceso</string>
    <string name="identified_user">Usuario: </string>
    <string name="selected_hospital">Hospital: </string>
    <string name="other_mode">Otra opción</string>

    //Material Post-Counter Activity
    <string name="set_title">Nombre de la caja</string>
    <string name="set_name_default">Nombre de la caja</string>
    <string name="previous_count">Recuento Pre:</string>
    <string name="post_count">Recuento Post:</string>
    <string name="verified_post_count">Verificar recuento</string>
    <string name="remarks">Observaciones</string>
    <string name="theoretical_counter">Teórico:</string>
    <string name="not_pressed_counter_button">Debe pulsar el botón de iniciar</string>
    <string name="alert_dialog_message">No se han localizado todos los instrumentos.¿Desea ver el listado o validar el recuento?</string>
    <string name="show_list">Mostrar</string>
    <string name="alert_dialog_title">Atención</string>
    <string name="alert_dialog_validate_counter">Validar recuento</string>
    <string name="instrument_list_activity_title">Listado de instrumentos</string>
    <string name="to_locate_title">pendientes de localizar:</string>

    //PrinterSettingsActivity
    <string name="printer_test_button">Probar conexión</string>
    <string name="ip_address">Dirección IP:</string>
    <string name="port_number">Puerto:</string>
    <string name="not_connected">No conectado</string>
    <string name="connecting">Conectando</string>
    <string name="connection_error">Error de conexión</string>
    <string name="connection_ok">Conexión establecida</string>
    <string name="invalid_data">Valores no válidos</string>
    <string name="disconnecting">Desconectando</string>
    <string name="determining_printer_language">Recuperando lenguaje de la impresora</string>
    <string name="printer_language">Lenguaje de impresora </string>
    <string name="unknown_printer_language">Lenguaje de impresora desconocido</string>
    <string name="sending_data">Enviando datos</string>
    <string name="printing_error">Error de impresión, por favor, revise la configuración de impresora</string>

    //Show ErrorLog Activity
    <string name="user">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="user_hint">Introduzca usuario</string>
    <string name="password_hint">Introduzca contraseña</string>
    <string name="login">Activar</string>
    <string name="show_error_log">Ver log</string>
    <string name="show_error_log_title">Registro de errores</string>
    <string name="exit">Salir</string>


</resources>