<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowErrorLogActivity">

    <LinearLayout
        android:id ="@+id/mainErrorLogLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewErrorLogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/show_error_log_title"
            android:textSize="30sp"
            android:background="@color/medium_grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/user"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"/>
            <EditText
                android:id="@+id/editTextInsertUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"/>
            <EditText
                android:id="@+id/editTextInsertPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:gravity="center"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@color/green"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/medium_grey"
                android:contentDescription="@string/global_image_description"
                android:paddingLeft="5dp"
                android:paddingTop="1dp"
                android:paddingRight="5dp"
                android:paddingBottom="0dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/showErrorLogLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/buttonShowErrorLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_error_log"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded_corners"
                android:enabled="false"/>
            <!-- Para separar los botones -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="      "/>

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded_corner_grey"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|top"
                android:singleLine="false"
                android:scrollbars="vertical"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>