<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShipmentActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewShipmentUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identified_user" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medium_grey"
            android:contentDescription="@string/global_image_description"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:paddingRight="5dp"
            android:paddingBottom="0dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:id="@+id/textViewShipmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipment_title"
            android:textSize="18sp"
            tools:text="@string/location_title" />

        <TextView
            android:id="@+id/textViewShipmentResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shipment_empty"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medium_grey"
            android:contentDescription="@string/global_image_description"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:paddingRight="5dp"
            android:paddingBottom="0dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/trolley"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textViewTrolleyName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:text="@string/trolley_hint"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medium_grey"
            android:contentDescription="@string/global_image_description"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:paddingRight="5dp"
            android:paddingBottom="0dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewShipmentMaterialTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materials_shipment_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewShipmentMaterialCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/materials_counter"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medium_grey"
            android:contentDescription="@string/global_image_description"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:paddingRight="5dp"
            android:paddingBottom="0dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />


    </LinearLayout>
    <!-- Size to TC21 346 dp -->
    <!-- Size to TC20 248 dp -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="346dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomShipmentNavigationMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLayout">

        <ListView
            android:id="@+id/listViewShipmentMaterials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomShipmentNavigationMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/medium_grey"
        app:itemIconTint="@color/buttonTrazins"
        app:itemTextColor="@color/buttonTrazins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:menu="@menu/menu_navigation_shipment_activity">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>