<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".surgicalprocessactivities.ShowInstrumentListActivity">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewInstrumentListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrument_list_activity_title"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textViewToLocateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_locate_title"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medium_grey"
            android:contentDescription="@string/global_image_description"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:paddingRight="5dp"
            android:paddingBottom="0dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />
        <ListView
            android:id="@+id/listViewInstrumentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice" />
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomInstrumentListActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/medium_grey"
        app:itemIconTint="@color/buttonTrazins"
        app:itemTextColor="@color/buttonTrazins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_instrument_list_activity">
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>